.main fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -16,7 +16,7 @@
         }
 
         p {
-            color: $dark-grayish-blue;
+            color: #53576A;
         }
 
         .get_started_link {
@@ -27,6 +27,7 @@
             color: #fff;
             font-weight: 700;
             font-size: .8rem;
+            background: #DD370E;
 
             &:hover {
                 opacity: 70%;
